--- a/004/package.json
+++ b/004/package.json
@@ -14,6 +14,7 @@
     "scrypt": "",
     "passport": "",
     "passport-local": "",
-    "passport-facebook": "~1.0.0"
+    "passport-facebook": "~1.0.0",
+    "passport-twitter": "~1.0.0"
   }
 }
