--- a/004/config-sample.json
+++ b/004/config-sample.json
@@ -2,5 +2,9 @@
     "facebook": {
         "id": "Facebook App Id",
         "secret": "Facebook App Secret"
+    },
+    "twitter": {
+    	"key": "Twitter consumer key",
+    	"secret": "Twitter consumer secret"
     }
 }
